--- a/FE/src/components/NewPostForm/NewPostForm.scss
+++ b/FE/src/components/NewPostForm/NewPostForm.scss
@@ -2,10 +2,10 @@
 .new-post-form {
   background-color: $light-sky-blue;
   width: 70vw;
-  height: 650px;
+  height: 700px;
   border-radius: 10px;
   border: 1px solid #fff;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
   display: flex;
   position: fixed;
   top: 25%;
@@ -18,16 +18,13 @@
   &.non-active {
     display: none;
   }
-  .sidebar {
-    flex: 15%;
-    background-color: white;
-  }
+
   .form-content {
     flex: 85%;
     .information-section {
       height: 100%;
       overflow-y: scroll;
-
+      padding: 15px;
       form {
         display: flex;
 
@@ -105,6 +102,15 @@
               border-radius: 5px;
             }
           }
+          .select-location {
+            display: flex;
+            height: 350px;
+            flex-direction: column;
+            gap: 5px;
+            background-color: white;
+            padding: 10px;
+            border-radius: 5px;
+          }
         }
         .right {
           flex: 3;
@@ -117,6 +123,7 @@
             display: flex;
             gap: 50px;
             justify-content: flex-end;
+            padding-right: 20px;
             button {
               height: 35px;
               width: max-content;
@@ -125,6 +132,7 @@
               border-radius: 5px;
               text-align: center;
               font-weight: 300;
+              margin-bottom: 20px;
               &:last-child:hover {
                 background-color: rgb(250, 38, 38);
                 color: white;
@@ -139,6 +147,42 @@
             background-color: white;
             border-radius: 5px;
             padding: 20px;
+          }
+          .room-size {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            background-color: white;
+            padding: 10px;
+            border-radius: 5px;
+            input {
+              height: 35px;
+              padding: 15px;
+              border: 1px solid #bebebe;
+              border-radius: 5px;
+            }
+          }
+          .nearby-place {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            background-color: white;
+            padding: 10px;
+            border-radius: 5px;
+            input {
+              height: 35px;
+              padding: 15px;
+              border: 1px solid #bebebe;
+              border-radius: 5px;
+            }
+          }
+          .features {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            background-color: white;
+            padding: 10px;
+            border-radius: 5px;
           }
         }
       }
