--- a/FE/src/components/Header/Header.scss
+++ b/FE/src/components/Header/Header.scss
@@ -140,6 +140,7 @@ nav {
       span {
         font-weight: bold;
         font-size: 18px;
+        cursor: pointer;
         @include sm {
           display: none;
         }
