--- a/FE/src/components/Header/Header.scss
+++ b/FE/src/components/Header/Header.scss
@@ -149,6 +149,21 @@ nav {
         background-color: orange;
         border-radius: 5px;
       }
+      button {
+        background-color: orange;
+        border-radius: 5px;
+        height: 50px;
+        padding: 5px;
+        font-weight: bold;
+        font-size: 22px;
+        border: none;
+        margin-right: 10px;
+        &:hover {
+          cursor: pointer;
+          scale: 1.05;
+          transition: all 0.4s ease;
+        }
+      }
     }
   }
   .profile-page-left {
