Update Card.jsx and SinglePage.jsx
redesign card and singlepage to fit the returned data from api

--- a/FE/src/pages/homePage/homePage.scss
+++ b/FE/src/pages/homePage/homePage.scss
@@ -3,7 +3,8 @@
 .homePage {
   display: flex;
   background: $primary-color;
-
+  overflow: hidden;
+  height: 100%;
   .textContainer {
     flex: 3;
     .wrapper {
