--- a/FE/src/pages/homePage/homePage.scss
+++ b/FE/src/pages/homePage/homePage.scss
@@ -7,13 +7,15 @@
   height: 100%;
   .textContainer {
     flex: 3;
+    position: relative;
     .wrapper {
       padding-right: 50px;
       display: flex;
       flex-direction: column;
-      margin-top: 50px;
       gap: 40px;
       height: 90%;
+      position: absolute;
+      top: 25%;
       @include sm {
         gap: 20px;
         align-items: center;
