--- a/FE/src/pages/listPage/listPage.scss
+++ b/FE/src/pages/listPage/listPage.scss
@@ -17,6 +17,7 @@
       flex-direction: column;
       gap: 50px;
       overflow-y: scroll;
+      scrollbar-width: thin;
     }
   }
   .mapContainer {
