--- a/FE/src/pages/profile/profilePage.scss
+++ b/FE/src/pages/profile/profilePage.scss
@@ -8,6 +8,7 @@
     flex: 5;
     gap: 20px;
     overflow-y: scroll;
+    scrollbar-width: thin;
     margin-bottom: 50px;
     .wrapper {
       padding-right: 50px;
