--- a/FE/src/pages/profile/profilePage.scss
+++ b/FE/src/pages/profile/profilePage.scss
@@ -25,6 +25,11 @@
           cursor: pointer;
           border: none;
         }
+        .toggleUpdate {
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+        }
       }
       .info {
         display: flex;
