--- a/FE/src/pages/singleCompany/singleCompany.scss
+++ b/FE/src/pages/singleCompany/singleCompany.scss
@@ -5,18 +5,30 @@
   height: 100%;
   .left {
     flex: 3;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
     overflow-y: scroll;
+    scrollbar-width: thin;
     .wrapper {
       padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
       .imgSlider {
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
           border-radius: 10px;
+        }
+      }
+      .description {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        font-size: 16px;
+        color: #111111;
+        p {
+          line-height: 1.5;
         }
       }
     }
@@ -28,17 +40,5 @@
     flex-direction: column;
     gap: 20px;
     background-color: $light-sky-blue;
-
-    .description {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      padding: 20px;
-      font-size: 16px;
-      color: #444;
-      p {
-        line-height: 1.5;
-      }
-    }
   }
 }
