--- a/FE/src/components/Card/Card.scss
+++ b/FE/src/components/Card/Card.scss
@@ -1,5 +1,16 @@
 @import "../../responsive.scss";
 @import "../../color.scss";
+// .overlay {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.5);
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 .card {
   display: flex;
   gap: 20px;
