--- a/FE/src/components/UpdateRealEstate/UpdateRealEstate.scss
+++ b/FE/src/components/UpdateRealEstate/UpdateRealEstate.scss
@@ -1,8 +1,19 @@
 @import "../../color.scss";
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .update-form {
   background-color: $light-sky-blue;
   width: 70vw;
-  height: 900px;
+  height: 800px;
   border-radius: 10px;
   border: 1px solid #fff;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
@@ -12,6 +23,7 @@
   left: 50%;
   transform: translate(-50%, -20%);
   transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
+  overflow-y: scroll;
   &.active {
     display: flex;
   }
@@ -23,7 +35,7 @@
     flex: 85%;
     .information-section {
       height: 100%;
-      overflow-y: scroll;
+
       padding: 15px;
       form {
         display: flex;
