--- a/FE/src/components/Slider/Slider.scss
+++ b/FE/src/components/Slider/Slider.scss
@@ -65,6 +65,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: scroll;
+    scrollbar-width: none;
     gap: 20px;
     overflow: scroll;
     scrollbar-width: none;
