--- a/FE/src/pages/profile/profilePage.scss
+++ b/FE/src/pages/profile/profilePage.scss
@@ -49,9 +49,9 @@
         }
       }
       .admin {
-        background-image: url(https://chunithm-net-eng.com/mobile/images/bg_chara_rainbow.png);
-        background-repeat: no-repeat;
-        background-position: center;
+        // background-image: url(https://chunithm-net-eng.com/mobile/images/bg_chara_rainbow.png);
+        // background-repeat: no-repeat;
+        // background-position: center;
       }
       .info {
         display: flex;
@@ -65,12 +65,17 @@
           flex: 1;
           align-items: flex-start;
           padding: 20px;
+          line-height: 1.5;
+          font-size: 20px;
+          font-weight: 500;
+          font-style: italic;
+          background-color: #f9f9f971;
         }
         .infowrap {
           flex: 1;
           display: flex;
           flex-direction: column;
-          gap: 30px;
+          gap: 20px;
           span {
             display: flex;
             align-items: center;
