--- a/FE/src/pages/otherProfile/otherProfile.scss
+++ b/FE/src/pages/otherProfile/otherProfile.scss
@@ -1,5 +1,5 @@
 @import "../../color.scss";
-.profilePage {
+.otherprofilePage {
   display: flex;
   height: 100%;
   overflow-y: hidden;
@@ -29,34 +29,9 @@
     margin-bottom: 50px;
     .wrapper {
       padding-right: 50px;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  .userwrapper {
-    display: grid;
-    grid-template-columns: repeat( 1fr); // Adjust the number of columns as needed
-    .user {
-      margin: 10px;
-      padding: 10px;
       display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 20px;
-      height: 70px;
-      border-radius: 10px;
-      background-color: $light-sky-blue;
-      font-weight: 600;
-      cursor: pointer;
-      justify-content: space-around;
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        height: 50px;
-        object-fit: cover;
-      }
-    }
-  }
+      flex-direction: column;
+      gap: 30px;
       .title {
         display: flex;
         align-items: center;
@@ -74,9 +49,9 @@
         }
       }
       .admin {
-        // background-image: url(https://chunithm-net-eng.com/mobile/images/bg_chara_rainbow.png);
-        // background-repeat: no-repeat;
-        // background-position: center;
+        background-image: url(https://chunithm-net-eng.com/mobile/images/bg_chara_rainbow.png);
+        background-repeat: no-repeat;
+        background-position: center;
       }
       .info {
         display: flex;
@@ -90,17 +65,12 @@
           flex: 1;
           align-items: flex-start;
           padding: 20px;
-          line-height: 1.5;
-          font-size: 20px;
-          font-weight: 500;
-          font-style: italic;
-          background-color: #f9f9f971;
         }
         .infowrap {
           flex: 1;
           display: flex;
           flex-direction: column;
-          gap: 20px;
+          gap: 30px;
           span {
             display: flex;
             align-items: center;
