--- a/FE/src/pages/profile/profilePage.scss
+++ b/FE/src/pages/profile/profilePage.scss
@@ -29,34 +29,47 @@
     margin-bottom: 50px;
     .wrapper {
       padding-right: 50px;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  .userwrapper {
-    display: grid;
-    grid-template-columns: repeat( 1fr); // Adjust the number of columns as needed
-    .user {
-      margin: 10px;
-      padding: 10px;
       display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 20px;
-      height: 70px;
-      border-radius: 10px;
-      background-color: $light-sky-blue;
-      font-weight: 600;
-      cursor: pointer;
-      justify-content: space-around;
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        height: 50px;
-        object-fit: cover;
+      flex-direction: column;
+      gap: 30px;
+      .userwrapper {
+        display: grid;
+        grid-template-columns: repeat(
+          1fr
+        ); // Adjust the number of columns as needed
+        .user {
+          margin: 10px;
+          padding: 10px;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 20px;
+          height: 70px;
+          border-radius: 10px;
+          background-color: $light-sky-blue;
+          font-weight: 600;
+          justify-content: space-around;
+          .buttonyellow{
+            padding: 10px 15px;
+            background-color: orange;
+            cursor: pointer;
+            border: none;
+          }
+          .buttonred {
+            padding: 10px 15px;
+            background-color: red;
+            cursor: pointer;
+            border: none;
+          }
+          img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            height: 50px;
+            object-fit: cover;
+          }
+        }
       }
-    }
-  }
       .title {
         display: flex;
         align-items: center;
